Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106594

Text baseline anchor not updating properly

    XMLWordPrintable

Details

    • Linux/X11
    • 4933bd6351 (qt/qtdeclarative/dev) 4933bd6351 (qt/tqtc-qtdeclarative/dev) 3537c67dd0 (qt/qtdeclarative/6.4) 3537c67dd0 (qt/tqtc-qtdeclarative/6.4) 8d6beb7940 (qt/tqtc-qtdeclarative/5.15) 3aca22d5f5 (qt/qtdeclarative/6.3)

    Description

      The basline anchor of a QtQuick Text element doesn't always update correctly when the Text.Fit fontSizeMode is used.

      In the attached example there are two Text elements painted inside a blue Rectangle. One Text Element doesn't use Text.Fit and has a text which fits inside the box. The other uses Text.Fit with a larger text and needs to decrease the fontSize.

      When clicking on the boxes, the blue rectangle gets bigger and the font moves down (anchored bottom). The violet Rectangle uses a basline anchor and should be resized accordingly when the blue rectangle updates its size.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            gagi Dominik Holland
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: