Text: Re-layout the text when a alignment is set and the height grows

When the top alignment (default) is used, a growing height can be
ignored in some situations and no re-layout is needed. But once
the alignment has been changed, the re-layout needs to happen, as
otherwise not all anchors are updated correctly.

Fixes: QTBUG-106594
Change-Id: I9ab9999f49331aadd3bb8247d520288c40b51b21
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
(cherry picked from commit 4933bd6351feec988746af647c391c46483f049a)
Reviewed-by: Dominik Holland <dominik.holland@qt.io>